Search FTP complete Refactor files to multiple package Refactor some functions to utils package

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,12 @@
 <resources>
     <string name="app_name" translatable="false">FTPClient</string>
+    <string name="add_ftp_page">Add FTP Server</string>
+    <string name="search_ftp_page">Search FTP Server</string>
+    <string name="auth_title">Authentication</string>
     <string name="edit_server" translatable="false">Edit_Server</string>
     <string name="add_server" translatable="false">Add_server</string>
     <string name="ftp_servers">FTP Servers:</string>
-    <string name="add_ftp_page">Add FTP Server</string>
     <string name="server_ip_address">server ip address:</string>
-    <string name="back">back</string>
-    <string name="ok">OK</string>
     <string name="ip_test">192</string>
     <string name="ip_test_2">168</string>
     <string name="ip_test_3">1</string>
@@ -23,11 +23,14 @@
     <string name="move_file">move file</string>
     <string name="delete_file">delete file</string>
     <string name="server_config_image">Server configs</string>
-    <string name="auth_title">Authentication</string>
-    <string name="search">search</string>
-    <string name="confirm">confirm</string>
     <string name="file_list">file list</string>
     <string name="server_encoding">Server Encoding:</string>
     <string name="gbk">GBK</string>
     <string name="utf_8">UTF-8</string>
+
+
+    <string name="back">back</string>
+    <string name="confirm">confirm</string>
+    <string name="search">search</string>
+    <string name="alertMessage">No FTP server in your LAN</string>
 </resources>
